--- a/findnews/build.gradle
+++ b/findnews/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile project(path: ':pulltorefresh')
+    compile project(path: ':library')
     compile files('libs/Volley.jar')
     compile files('libs/glide-3.7.0.jar')
     compile 'com.android.support:appcompat-v7:23.2.1'
